feat: comprehensive framework enhancement for top-tier open-source readiness
Phase 1 - Foundation fixes:
- Fix UserContext/TraceContext to use TransmittableThreadLocal for async context
- Remove hardcoded inner-call secret from HeaderConstant
- Move BaseEntity with MyBatis-Plus annotations to starter-mybatis
- Remove duplicate RedisHealthIndicator (keep monitor version)
- Add @ConditionalOnClass guard to SentinelFallbackHandler
- Decouple MQ starter from Redis starter dependency
- Fix README config examples, SCM URLs, copyright year

Phase 2 - Quality assurance:
- Add 53 unit tests (common-core, starter-web, starter-redis)
- CI pipeline now runs full tests (removed -DskipTests)
- Upload test results as artifacts

Phase 3 - Core capabilities:
- Add sloth-boot-starter-auth (Sa-Token integration)
- Add sloth-boot-generator (MyBatis-Plus code generator)
- Fix DataScopeInterceptor with real WHERE clause injection
- Add example controllers (Redis/Excel/Auth)

Phase 4 - Modern features:
- Add i18n support with MessageSource and zh/en message files
- Add Java 21 virtual thread support in thread-pool starter
- Add spring-configuration-metadata.json for IDE auto-completion
- Add AI streaming support (SSE via Flux<String>)
- Add Micrometer Tracing bridge (TraceContextBridge)
- Add GraalVM Native Image support (native-maven-plugin)
- Remove deprecated bootstrap.yml, add graceful shutdown

Phase 5 - Documentation and operations:
- Add architecture docs (dependency/request/deployment diagrams)
- Add README for all 19 modules (config, examples, FAQ)
- Add Dockerfile and docker-compose.yml
- Complete CHANGELOG with all changes
- Move community docs (CONTRIBUTING/CODE_OF_CONDUCT/SECURITY/SUPPORT) to docs/
- Upgrade README with architecture diagram, competitor comparison, Docker quick start