@@ -27,6 +27,14 @@ public class ThreadPoolProperties {
     private boolean dynamic = true;
 
     /**
+     * 是否启用 Java 21 虚拟线程。
+     * <p>
+     * 启用后将注册基于虚拟线程的 Executor，适用于 I/O 密集型任务。
+     * 需要 JDK 21+ 且 JVM 参数 {@code --enable-preview}（JDK 21 正式版无需）。
+     */
+    private boolean virtualEnabled = false;
+
+    /**
      * 多线程池配置。
      */
     private Map<String, PoolConfig> pools = buildDefaultPools();
